# Flipped-Legacy

./: .gitignore  LICENSE  Makefile  README.md  electron-builder.json  meson.build  package.json  test.c  tsconfig.json
Editor/: Editor.c  EditorEnums.h  EditorTypes.h
Editor/Cards/: CardTypes.h  EffectFuncs.c  NewCard.c
Editor/Handlers/: Buff_Debuff.c  FL_Handlers.c  NewGame.c
Editor/PowerWords/: PowerWordTypes.h
Editor/UI/: CrerateMenu.c  Logo.c
Test/: test.c
assets/: Assets.md
include/: fl_types.h  utils.h
src/: FL_Include.c  constants.h  main.c  meson.build  texture_loader.c  types.h
src/GameObjs/: GameObj_codes.h  Generic_Btn.c  Generic_Image.c  Generic_Text.c  Hashmaps.c  Invis_Dot.c  Main_Background.c
src/Screens/: LevelSelection.c  MainMenu.c
src/Util/: TextLoader.c  Utils.c  constants.h  manager.c  types.h
src/editor/: editor.c  meson.build  utils.c
src/editor/fl-card/: fl-card.c  fl-card.h
src/editor/fl-character/: fl-character.c  fl-character.h
src/editor/fl-condition/: fl-condition.c  fl-condition.h
src/editor/fl-effect/: fl-effect.c  fl-effect.h
src/editor/fl-enemy/: fl-enemy.c  fl-enemy.h
src/editor/fl-game/: fl-game.c  fl-game.h
src/editor/fl-power-word/: fl-power-word.c  fl-power-word.h
src/editor/fl-word/: fl-word.c  fl-word.h
src/electron/: main.ts
