src_files = [
  'editor.c',
  'utils.c', 
  'fl-card/fl-card.c',
  'fl-character/fl-character.c',
  'fl-condition/fl-condition.c',
  'fl-effect/fl-effect.c',
  'fl-power-word/fl-power-word.c',
  'fl-game/fl-game.c',
  'fl-word/fl-word.c'
]

executable(
    'editor',
    src_files,
    include_directories: include_dir,
    dependencies: [curses_dep]
)